optimize connector